--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,6 +43,7 @@ page-type: post
         {% include sidebar.html %}
 </main>
 
+<!--       DISQUS : Start         -->
 <div id="disqus_thread"></div>
 <script>
 
@@ -63,4 +64,5 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
+   
+<!--       DISQUS : End         -->                         
