--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@ page-type: post
 
 
 
-
+<!--- DISQUS : START -->
 <div class="comments">
     <div id="disqus_thread"></div>
 <script type="text/javascript">
@@ -62,5 +62,5 @@ dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 </div>
-
+<!--- DISQUS : END -->
 
