--- a/css/main.css
+++ b/css/main.css
@@ -282,7 +282,7 @@ th {
   Global settings
 -----------------------------------------------------*/
 body {
-	font: 110% 'Roboto Slab', Georgia, serif;
+	font: 100% 'Arial', Georgia, serif;
 	background: white;
 	direction: ltr;
 }
