--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   <li><a href="{{site.baseurl}}/index.html" title="Articles">Blog</a></li>
   <li><a href="{{site.baseurl}}/FEM.html" title="Articles">FEM</a></li>
   <li><a href="{{site.baseurl}}/Plasticity.html" title="Articles">Plasticity</a></li>
-  <li><a href="{{site.baseurl}}/Research.html" title="Articles">Publications<a</li>
+  <li><a href="{{site.baseurl}}/Publications.html" title="Articles">Publications<a</li>
   <li><a href="{{site.baseurl}}/Family.html" title="Articles">Family</a></li>
   <li><a href="{{site.baseurl}}/about.html" title="learn more">About</a></li>
   <li><a href="{{site.baseurl}}/resources.html" title="resources">Resources</a></li>
