--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -1,81 +1,136 @@
----
----
+.highlight code, .highlight pre {
+color:#fdce93;
+background-color:#3f3f3f;
+}
 
-.highlight {
-  .hll { background-color: #e1e1e8 }
-  .c { color: #87ceeb} /* Comment */
-  .err { color: #ffffff} /* Error */
-  .g { color: #ffffff} /* Generic */
-  .k { color: #f0e68c} /* Keyword */
-  .l { color: #ffffff} /* Literal */
-  .n { color: #ffffff} /* Name */
-  .o { color: #ffffff} /* Operator */
-  .x { color: #ffffff} /* Other */
-  .p { color: #ffffff} /* Punctuation */
-  .cm { color: #87ceeb} /* Comment.Multiline */
-  .cp { color: #cd5c5c} /* Comment.Preproc */
-  .c1 { color: #87ceeb} /* Comment.Single */
-  .cs { color: #87ceeb} /* Comment.Special */
-  .gd { color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
-  .ge { color: #c000c0; text-decoration: underline} /* Generic.Emph */
-  .gr { color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Error */
-  .gh { color: #cd5c5c} /* Generic.Heading */
-  .gi { color: #ffffff; background-color: #0000c0 } /* Generic.Inserted */
-  span.go { color: #add8e6; font-weight: bold; background-color: #4d4d4d } /* Generic.Output, qualified with span to prevent applying this style to the Go language, see #1153. */
-  .gp { color: #ffffff} /* Generic.Prompt */
-  .gs { color: #ffffff} /* Generic.Strong */
-  .gu { color: #cd5c5c} /* Generic.Subheading */
-  .gt { color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Traceback */
-  .kc { color: #f0e68c} /* Keyword.Constant */
-  .kd { color: #f0e68c} /* Keyword.Declaration */
-  .kn { color: #f0e68c} /* Keyword.Namespace */
-  .kp { color: #f0e68c} /* Keyword.Pseudo */
-  .kr { color: #f0e68c} /* Keyword.Reserved */
-  .kt { color: #ed6fdc} /* Keyword.Type */
-  .ld { color: #ffffff} /* Literal.Date */
-  .m { color: #af1c4d} /* Literal.Number */
-  .s { color: #ffffff} /* Literal.String */
-  .na { color: #ffffff} /* Name.Attribute */
-  .nb { color: #ffffff} /* Name.Builtin */
-  .nc { color: #ffffff} /* Name.Class */
-  .no { color: #ffa0a0} /* Name.Constant */
-  .nd { color: #ffffff} /* Name.Decorator */
-  .ni { color: #ffdead} /* Name.Entity */
-  .ne { color: #ffffff} /* Name.Exception */
-  .nf { color: #2fc46a} /* Name.Function */
-  .nl { color: #ffffff} /* Name.Label */
-  .nn { color: #ffffff} /* Name.Namespace */
-  .nx { color: #ffffff} /* Name.Other */
-  .py { color: #ffffff} /* Name.Property */
-  .nt { color: #f0e68c} /* Name.Tag */
-  .nv { color: #2fc46a} /* Name.Variable */
-  .ow { color: #ffffff} /* Operator.Word */
-  .w { color: #ffffff} /* Text.Whitespace */
-  .mf { color: #ffffff} /* Literal.Number.Float */
-  .mh { color: #ffffff} /* Literal.Number.Hex */
-  .mi { color: #ffffff} /* Literal.Number.Integer */
-  .mo { color: #ffffff} /* Literal.Number.Oct */
-  .sb { color: #ffffff} /* Literal.String.Backtick */
-  .sc { color: #ffffff} /* Literal.String.Char */
-  .sd { color: #ffffff} /* Literal.String.Doc */
-  .s2 { color: #ffffff} /* Literal.String.Double */
-  .se { color: #ffffff} /* Literal.String.Escape */
-  .sh { color: #ffffff} /* Literal.String.Heredoc */
-  .si { color: #ffffff} /* Literal.String.Interpol */
-  .sx { color: #ffffff} /* Literal.String.Other */
-  .sr { color: #ffffff} /* Literal.String.Regex */
-  .s1 { color: #ffffff} /* Literal.String.Single */
-  .ss { color: #ffffff} /* Literal.String.Symbol */
-  .bp { color: #ffffff} /* Name.Builtin.Pseudo */
-  .vc { color: #98fb98} /* Name.Variable.Class */
-  .vg { color: #98fb98} /* Name.Variable.Global */
-  .vi { color: #98fb98} /* Name.Variable.Instance */
-  .il { color: #ffffff} /* Literal.Number.Integer.Long */
-  .bash .nv {
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-         -o-user-select: none;
-            user-select: none;
-  }
+.highlight .hll {
+background-color:#222;
+}
+
+.highlight .err {
+color:#e37170;
+background-color:#3d3535;
+}
+
+.highlight .k {
+color:#f0dfaf;
+}
+
+.highlight .p {
+color:#41706f;
+}
+
+.highlight .cs {
+color:#cd0000;
+font-weight:700;
+}
+
+.highlight .gd {
+color:#cd0000;
+}
+
+.highlight .ge {
+color:#ccc;
+font-style:italic;
+}
+
+.highlight .gr {
+color:red;
+}
+
+.highlight .go {
+color:gray;
+}
+
+.highlight .gs {
+color:#ccc;
+font-weight:700;
+}
+
+.highlight .gu {
+color:purple;
+font-weight:700;
+}
+
+.highlight .gt {
+color:#0040D0;
+}
+
+.highlight .kc {
+color:#dca3a3;
+}
+
+.highlight .kd {
+color:#ffff86;
+}
+
+.highlight .kn {
+color:#dfaf8f;
+font-weight:700;
+}
+
+.highlight .kp {
+color:#cdcf99;
+}
+
+.highlight .kr {
+color:#cdcd00;
+}
+
+.highlight .ni {
+color:#c28182;
+}
+
+.highlight .ne {
+color:#c3bf9f;
+font-weight:700;
+}
+
+.highlight .nn {
+color:#8fbede;
+}
+
+.highlight .vi {
+color:#ffffc7;
+}
+
+.highlight .c,.preview-zenburn .highlight .g,.preview-zenburn .highlight .cm,.preview-zenburn .highlight .cp,.preview-zenburn .highlight .c1 {
+color:#7f9f7f;
+}
+
+.highlight .l,.preview-zenburn .highlight .x,.preview-zenburn .highlight .no,.preview-zenburn .highlight .nd,.preview-zenburn .highlight .nl,.preview-zenburn .highlight .nx,.preview-zenburn .highlight .py,.preview-zenburn .highlight .w {
+color:#ccc;
+}
+
+.highlight .n,.preview-zenburn .highlight .nv,.preview-zenburn .highlight .vg {
+color:#dcdccc;
+}
+
+.highlight .o,.preview-zenburn .highlight .ow {
+color:#f0efd0;
+}
+
+.highlight .gh,.preview-zenburn .highlight .gp {
+color:#dcdccc;
+font-weight:700;
+}
+
+.highlight .gi,.preview-zenburn .highlight .kt {
+color:#00cd00;
+}
+
+.highlight .ld,.preview-zenburn .highlight .s,.preview-zenburn .highlight .sb,.preview-zenburn .highlight .sc,.preview-zenburn .highlight .sd,.preview-zenburn .highlight .s2,.preview-zenburn .highlight .se,.preview-zenburn .highlight .sh,.preview-zenburn .highlight .si,.preview-zenburn .highlight .sx,.preview-zenburn .highlight .sr,.preview-zenburn .highlight .s1,.preview-zenburn .highlight .ss {
+color:#cc9393;
+}
+
+.highlight .m,.preview-zenburn .highlight .mf,.preview-zenburn .highlight .mh,.preview-zenburn .highlight .mi,.preview-zenburn .highlight .mo,.preview-zenburn .highlight .il {
+color:#8cd0d3;
+}
+
+.highlight .na,.preview-zenburn .highlight .nt {
+color:#9ac39f;
+}
+
+.highlight .nb,.preview-zenburn .highlight .nc,.preview-zenburn .highlight .nf,.preview-zenburn .highlight .bp,.preview-zenburn .highlight .vc {
+color:#efef8f;
 }
