--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -42,7 +42,7 @@
   .nd { color: #ffffff} /* Name.Decorator */
   .ni { color: #ffdead} /* Name.Entity */
   .ne { color: #ffffff} /* Name.Exception */
-  .nf { color: #ffffff} /* Name.Function */
+  .nf { color: #058e2e} /* Name.Function */
   .nl { color: #ffffff} /* Name.Label */
   .nn { color: #ffffff} /* Name.Namespace */
   .nx { color: #ffffff} /* Name.Other */
