--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -37,7 +37,7 @@
   .s { color: #ffffff} /* Literal.String */
   .na { color: #ffffff} /* Name.Attribute */
   .nb { color: #ffffff} /* Name.Builtin */
-  .nc { color: #ffffff} /* Name.Class */
+  .nc { color: #a50e91} /* Name.Class */
   .no { color: #ffa0a0} /* Name.Constant */
   .nd { color: #ffffff} /* Name.Decorator */
   .ni { color: #ffdead} /* Name.Entity */
