--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -51,10 +51,10 @@
   .nv { color: #98fb98} /* Name.Variable */
   .ow { color: #ffffff} /* Operator.Word */
   .w { color: #ffffff} /* Text.Whitespace */
-  .mf { color: #ffffff} /* Literal.Number.Float */
-  .mh { color: #ffffff} /* Literal.Number.Hex */
-  .mi { color: #ffffff} /* Literal.Number.Integer */
-  .mo { color: #ffffff} /* Literal.Number.Oct */
+  .mf { color: #677015} /* Literal.Number.Float */
+  .mh { color: #677015} /* Literal.Number.Hex */
+  .mi { color: #677015} /* Literal.Number.Integer */
+  .mo { color: #677015} /* Literal.Number.Oct */
   .sb { color: #ffffff} /* Literal.String.Backtick */
   .sc { color: #ffffff} /* Literal.String.Char */
   .sd { color: #ffffff} /* Literal.String.Doc */
