--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -42,7 +42,7 @@
   .nd { color: #ffffff} /* Name.Decorator */
   .ni { color: #ffdead} /* Name.Entity */
   .ne { color: #ffffff} /* Name.Exception */
-  .nf { color: #058e2e} /* Name.Function */
+  .nf { color: #87e58d} /* Name.Function */
   .nl { color: #ffffff} /* Name.Label */
   .nn { color: #ffffff} /* Name.Namespace */
   .nx { color: #ffffff} /* Name.Other */
@@ -51,10 +51,10 @@
   .nv { color: #98fb98} /* Name.Variable */
   .ow { color: #ffffff} /* Operator.Word */
   .w { color: #ffffff} /* Text.Whitespace */
-  .mf { color: #677015} /* Literal.Number.Float */
-  .mh { color: #677015} /* Literal.Number.Hex */
-  .mi { color: #677015} /* Literal.Number.Integer */
-  .mo { color: #677015} /* Literal.Number.Oct */
+  .mf { color: #cea1c2} /* Literal.Number.Float */
+  .mh { color: #cea1c2} /* Literal.Number.Hex */
+  .mi { color: #cea1c2} /* Literal.Number.Integer */
+  .mo { color: #cea1c2} /* Literal.Number.Oct */
   .sb { color: #ffffff} /* Literal.String.Backtick */
   .sc { color: #ffffff} /* Literal.String.Char */
   .sd { color: #ffffff} /* Literal.String.Doc */
