--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -37,7 +37,7 @@
   .s { color: #ffffff} /* Literal.String */
   .na { color: #ffffff} /* Name.Attribute */
   .nb { color: #ffffff} /* Name.Builtin */
-  .nc { color: #a50e91} /* Name.Class */
+  .nc { color: #87e58d} /* Name.Class */
   .no { color: #ffa0a0} /* Name.Constant */
   .nd { color: #ffffff} /* Name.Decorator */
   .ni { color: #ffdead} /* Name.Entity */
@@ -51,10 +51,10 @@
   .nv { color: #98fb98} /* Name.Variable */
   .ow { color: #ffffff} /* Operator.Word */
   .w { color: #ffffff} /* Text.Whitespace */
-  .mf { color: #cea1c2} /* Literal.Number.Float */
-  .mh { color: #cea1c2} /* Literal.Number.Hex */
-  .mi { color: #cea1c2} /* Literal.Number.Integer */
-  .mo { color: #cea1c2} /* Literal.Number.Oct */
+  .mf { color: #62f7f7} /* Literal.Number.Float */
+  .mh { color: #62f7f7} /* Literal.Number.Hex */
+  .mi { color: #62f7f7} /* Literal.Number.Integer */
+  .mo { color: #62f7f7} /* Literal.Number.Oct */
   .sb { color: #ffffff} /* Literal.String.Backtick */
   .sc { color: #ffffff} /* Literal.String.Char */
   .sd { color: #ffffff} /* Literal.String.Doc */
