--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -16,16 +16,16 @@
   .cp { color: #cd5c5c} /* Comment.Preproc */
   .c1 { color: #87ceeb} /* Comment.Single */
   .cs { color: #87ceeb} /* Comment.Special */
-  .gd { color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
+  .gd { font: 95% 'Arial', Georgia, serif; color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
   .ge { color: #c000c0; text-decoration: underline} /* Generic.Emph */
   .gr { color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Error */
   .gh { color: #cd5c5c} /* Generic.Heading */
-  .gi { color: #ffffff; background-color: #0000c0 } /* Generic.Inserted */
+  .gi {  font: 95% 'Arial', Georgia, serif;color: #ffffff; background-color: #0000c0 } /* Generic.Inserted */
   span.go { color: #add8e6; font-weight: bold; background-color: #4d4d4d } /* Generic.Output, qualified with span to prevent applying this style to the Go language, see #1153. */
   .gp { color: #ffffff} /* Generic.Prompt */
   .gs { color: #ffffff} /* Generic.Strong */
   .gu { color: #cd5c5c} /* Generic.Subheading */
-  .gt { color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Traceback */
+  .gt { font: 95% 'Arial', Georgia, serif; color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Traceback */
   .kc { color: #f0e68c} /* Keyword.Constant */
   .kd { color: #f0e68c} /* Keyword.Declaration */
   .kn { color: #f0e68c} /* Keyword.Namespace */
