--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -31,7 +31,7 @@
   .kn { color: #f0e68c} /* Keyword.Namespace */
   .kp { color: #f0e68c} /* Keyword.Pseudo */
   .kr { color: #f0e68c} /* Keyword.Reserved */
-  .kt { color: #d8c7d7} /* Keyword.Type */
+  .kt { color: #71ddb4} /* Keyword.Type */
   .ld { color: #ffffff} /* Literal.Date */
   .m { color: #ffffff} /* Literal.Number */
   .s { color: #ffffff} /* Literal.String */
