--- a/css/main.css
+++ b/css/main.css
@@ -285,6 +285,7 @@ body {
 	font: 95% 'Arial', Georgia, serif;
 	background: white;
 	direction: ltr;
+	text-align: justify;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
