--- a/css/main.css
+++ b/css/main.css
@@ -281,24 +281,25 @@ th {
 /* -------------------------------------------------- 
   Global settings
 -----------------------------------------------------*/
-/* body {
-	font: 95% 'Arial', Georgia, serif;
+ body {
+	/*font: 95% 'Arial', Georgia, serif;*/
+        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	background: white;
 	direction: ltr;
 	text-align: justify;
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
-	font-weight: 700;
-	font-weight: bold;
+ 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        font-size: 100%; font-weight: 500; 
+  	text-align: left;
 }
 
-*/
+/*
 
 body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 12px;
   text-align: justify;
   line-height: 1.5;
   font-weight: 300;
@@ -311,7 +312,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align: left;
 }
 
-
+*/
 *, *:before, *:after {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
