--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -3,7 +3,7 @@
 
 .highlight {
   .hll { background-color: #ffffcc }
-  .c { color: #87ceeb ; font-style: italic} /* Comment */
+  .c { font: 65% 'Arial', Georgia, serif; color: #87ceeb ; font-style: italic} /* Comment */
   .err { color: #ffffff} /* Error */
   .g { color: #ffffff} /* Generic */
   .k { color: #f0e68c} /* Keyword */
