--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -42,7 +42,7 @@
   .nd { color: #ffffff} /* Name.Decorator */
   .ni { color: #ffdead} /* Name.Entity */
   .ne { color: #ffffff} /* Name.Exception */
-  .nf { color: #87e58d} /* Name.Function */
+  .nf { font: 65% 'Arial', Georgia, serif; color: #87e58d} /* Name.Function */
   .nl { color: #ffffff} /* Name.Label */
   .nn { color: #ffffff} /* Name.Namespace */
   .nx { color: #ffffff} /* Name.Other */
