--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -2,6 +2,7 @@
 ---
 
 .highlight {
+   font: 85% 'Arial', Georgia, serif;
   .hll { background-color: #ffffcc }
   .c { font: 65% 'Arial', Georgia, serif; color: #87ceeb ; font-style: italic} /* Comment */
   .err { color: #ffffff} /* Error */
