--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -1,11 +1,11 @@
 ---
 ---
-.highlight  {font: 85% 'Arial', Georgia, serif;}
+.highlight  {font: 85% 'Consolas', Georgia, serif;}
 
 .highlight {
    
   .hll { background-color: #ffffcc }
-  .c { font: 85% 'Arial', Georgia, serif; color: #87ceeb ; font-style: italic} /* Comment */
+  .c { color: #87ceeb ; font-style: italic} /* Comment */
   .err {font: 85% 'Arial', Georgia, serif; color: #ffffff} /* Error */
   .g {font: 85% 'Arial', Georgia, serif; color: #ffffff} /* Generic */
   .k {font: 85% 'Arial', Georgia, serif; color: #f0e68c} /* Keyword */
