--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -6,19 +6,19 @@
    
   .hll { background-color: #ffffcc ; width: 80%;}
   .c { color: #87ceeb ; font-style: italic} /* Comment */
-  .err {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Error */
-  .g {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Generic */
-  .k {font: 85% 'Consolas', Georgia, serif; color: #f0e68c} /* Keyword */
-  .l {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Literal */
-  .n {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Name */
-  .o {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Operator */
-  .x {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Other */
-  .p {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Punctuation */
-  .cm {font: 85% 'Consolas', Georgia, serif; color: #87ceeb} /* Comment.Multiline */
-  .cp {font: 85% 'Consolas', Georgia, serif; color: #cd5c5c} /* Comment.Preproc */
-  .c1 {font: 85% 'Consolas', Georgia, serif; color: #87ceeb} /* Comment.Single */
-  .cs {font: 85% 'Consolas', Georgia, serif; color: #87ceeb} /* Comment.Special */
-  .gd {font: 85% 'Consolas', Georgia, serif; font: 65% 'Arial', Georgia, serif; color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
+  .err { color: #ffffff} /* Error */
+  .g { color: #ffffff} /* Generic */
+  .k { color: #f0e68c} /* Keyword */
+  .l { color: #ffffff} /* Literal */
+  .n { color: #ffffff} /* Name */
+  .o { color: #ffffff} /* Operator */
+  .x { color: #ffffff} /* Other */
+  .p { color: #ffffff} /* Punctuation */
+  .cm { color: #87ceeb} /* Comment.Multiline */
+  .cp { color: #cd5c5c} /* Comment.Preproc */
+  .c1 { color: #87ceeb} /* Comment.Single */
+  .cs { color: #87ceeb} /* Comment.Special */
+  .gd { font: 65% 'Arial', Georgia, serif; color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
   .ge {font: 85% 'Consolas', Georgia, serif; color: #c000c0; text-decoration: underline} /* Generic.Emph */
   .gr {font: 85% 'Consolas', Georgia, serif; color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Error */
   .gh {font: 85% 'Consolas', Georgia, serif; color: #cd5c5c} /* Generic.Heading */
