--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -19,27 +19,27 @@
   .cp { color: #cd5c5c} /* Comment.Preproc */
   .c1 { color: #87ceeb} /* Comment.Single */
   .cs { color: #87ceeb} /* Comment.Special */
-  .gd { font: 65% 'Arial', Georgia, serif; color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
-  .ge {font: 85% 'Consolas', Georgia, serif; color: #c000c0; text-decoration: underline} /* Generic.Emph */
-  .gr {font: 85% 'Consolas', Georgia, serif; color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Error */
-  .gh {font: 85% 'Consolas', Georgia, serif; color: #cd5c5c} /* Generic.Heading */
-  .gi {font: 85% 'Consolas', Georgia, serif;color: #ffffff; background-color: #0000c0 } /* Generic.Inserted */
+  .gd { color: #0000c0; font-weight: bold; background-color: #008080 } /* Generic.Deleted */
+  .ge { color: #c000c0; text-decoration: underline} /* Generic.Emph */
+  .gr { color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Error */
+  .gh {color: #cd5c5c} /* Generic.Heading */
+  .gi {color: #ffffff; background-color: #0000c0 } /* Generic.Inserted */
   span.go { color: #add8e6; font-weight: bold; background-color: #4d4d4d } /* Generic.Output, qualified with span to prevent applying this style to the Go language, see #1153. */
-  .gp {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Generic.Prompt */
-  .gs {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Generic.Strong */
-  .gu {font: 85% 'Consolas', Georgia, serif; color: #cd5c5c} /* Generic.Subheading */
-  .gt {font: 65% 'Consolas', Georgia, serif; color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Traceback */
-  .kc {font: 85% 'Consolas', Georgia, serif; color: #f0e68c} /* Keyword.Constant */
-  .kd {font: 85% 'Consolas', Georgia, serif; color: #f0e68c} /* Keyword.Declaration */
-  .kn {font: 85% 'Consolas', Georgia, serif; color: #f0e68c} /* Keyword.Namespace */
-  .kp {font: 85% 'Consolas', Georgia, serif; color: #f0e68c} /* Keyword.Pseudo */
-  .kr {font: 85% 'Consolas', Georgia, serif; color: #f0e68c} /* Keyword.Reserved */
-  .kt {font: 85% 'Consolas', Georgia, serif; color: #71ddb4} /* Keyword.Type */
-  .ld {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Literal.Date */
-  .m {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Literal.Number */
-  .s {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Literal.String */
-  .na {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Name.Attribute */
-  .nb {font: 85% 'Consolas', Georgia, serif; color: #ffffff} /* Name.Builtin */
+  .gp {color: #ffffff} /* Generic.Prompt */
+  .gs {color: #ffffff} /* Generic.Strong */
+  .gu {color: #cd5c5c} /* Generic.Subheading */
+  .gt {color: #c0c0c0; font-weight: bold; background-color: #c00000 } /* Generic.Traceback */
+  .kc { color: #f0e68c} /* Keyword.Constant */
+  .kd { color: #f0e68c} /* Keyword.Declaration */
+  .kn { color: #f0e68c} /* Keyword.Namespace */
+  .kp { color: #f0e68c} /* Keyword.Pseudo */
+  .kr { color: #f0e68c} /* Keyword.Reserved */
+  .kt { color: #71ddb4} /* Keyword.Type */
+  .ld { color: #ffffff} /* Literal.Date */
+  .m { color: #ffffff} /* Literal.Number */
+  .s { color: #ffffff} /* Literal.String */
+  .na { color: #ffffff} /* Name.Attribute */
+  .nb { color: #ffffff} /* Name.Builtin */
   .nc { color: #87e58d} /* Name.Class */
   .no { color: #ffa0a0} /* Name.Constant */
   .nd { color: #ffffff} /* Name.Decorator */
