--- a/css/syntax-highlighting.scss
+++ b/css/syntax-highlighting.scss
@@ -1,11 +1,11 @@
 ---
 ---
 
-.highlight  {font: 85% 'Consolas', Georgia, serif; width:100%}
+.highlight  {font: 85% 'Consolas', Georgia, serif; width:120%}
 
 .highlight {
    
-  .hll { background-color: #ffffcc ; width: 80%;}
+  .hll { background-color: #ffffcc}
   .c { color: #87ceeb ; font-style: italic} /* Comment */
   .err { color: #ffffff} /* Error */
   .g { color: #ffffff} /* Generic */
