--- a/css/main.css
+++ b/css/main.css
@@ -291,8 +291,9 @@ th {
 
 h1, h2, h3, h4, h5, h6 {
  	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-        font-size: 100%; font-weight: 500; 
+        font-size: 100%; /*font-weight: 500; */
   	text-align: left;
+	font-weight: bold
 }
 
 
