--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,13 +37,14 @@
   <li><a href="{{site.baseurl}}/Family.html" title="Articles">Family</a></li>
   <li><a href="{{site.baseurl}}/about.html" title="learn more">About</a></li>
   <li><a href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
-  <li><a href="#"> Lessons </a></li>	  
+  <li><a href="#"> Lessons </a>	  
 	  <ul>
 		<li><a href="#"> FEM1</a></li>
 	        <li><a href="#"> FEM2</a></li>
 	        <li><a href="#"> FEM3</a></li>
 		  
           </ul>
+  </li>
   </ul>
 </nav>
 </header>
