--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
   <li><a href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
   <li><a href="#"> Lessons1 </a>	  
 	  <ul>
-		<li><a href="#"> FEM1</a></li>
-	        <li><a href="#"> FEM2</a></li>
-	        <li><a href="#"> FEM3</a></li>
+		<li><a href="{{site.baseurl}}/Plasticity.html"> Constitutive model</a></li>
+	        <li><a href="{{site.baseurl}}/geotech.html"> Geotechnical engineering </a></li>
+	        <li><a href="{{site.baseurl}}/FEM.html"> Finite element method</a></li>
 		  
           </ul>
   </li>
