--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   <li><a href="{{site.baseurl}}/Family.html" title="Articles">Family</a></li>
   <li><a href="{{site.baseurl}}/about.html" title="learn more">About</a></li>
   <li><a href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
-  <li><a href="#"> Lessons1 </a>	  
+  <li><a href="#"> Academic Notes </a>	  
 	  <ul>
 		<li><a href="{{site.baseurl}}/Plasticity.html"> Constitutive model</a></li>
 	        <li><a href="{{site.baseurl}}/geotech.html"> Geotechnical engineering </a></li>
