--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 <input type="checkbox" id="menu-toggle">
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
 <ul class="menu">
-  <li><a href="{{site.baseurl}}/index.html" Blog</a></li>
+  <li><a href="{{site.baseurl}}/index.html"> Blog </a></li>
   <li><a href="{{site.baseurl}}/Publications.html" title="Articles">Publications<a</li>
   <li><a href="{{site.baseurl}}/Family.html" title="Articles">Family</a></li>
   <li><a href="{{site.baseurl}}/about.html" title="learn more">About</a></li>
