--- a/css/main.css
+++ b/css/main.css
@@ -795,8 +795,8 @@ nav ul li {
 nav ul li a {
 	display: block;
 	font-family: arial;
-	color: #222;
-	font-size: 14px;
+	color: white;
+	font-size: 18px;
 	text-decoration: none;
 }
 
