--- a/css/main.css
+++ b/css/main.css
@@ -774,7 +774,7 @@ nav li {
 nav li a {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
 	color: white;
-	background: #42659A;
+	background: #72246e;
 	margin-right: 0.5em;
 	padding: .25em 1em;
 	display: inline-block;
