--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,8 @@ h1, h2, h3, h4, h5, h6 {
  	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
         font-size: 100%; /*font-weight: 500; */
   	text-align: left;
-	font-weight: bold
+	font-weight: bold;
+	color:	#0362a5;
 }
 
 
@@ -362,6 +363,7 @@ header h1 {
 	line-height:1;
 	margin: 0;
 	text-transform: uppercase;
+	color: #0362a5;
 }
 header p {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
@@ -744,6 +746,7 @@ aside {
 -----------------------------------------------------*/
 header h1 {
 	font-size: 3em;
+	color: #0362a5;
 }
 header p {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
