--- a/css/main.css
+++ b/css/main.css
@@ -402,13 +402,13 @@ article h2 {
 	font-size: 2em;
 	font-weight: 400;
 	line-height:1.2;
-	color: #42659A;
+	color: #1055bc;
 	margin-bottom:0.2em;
 }
 article h3 {
 	font-weight: 400;
 	font-size: 1.4em;
-	color: #42659A;
+	color: #1055bc;
 	margin-bottom: 0;
 }
 article h2 a {
