--- a/css/main.css
+++ b/css/main.css
@@ -777,7 +777,7 @@ nav li {
 nav li a {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
 	color: white;
-	background: #72246e;
+	background: #0533bc;
 	margin-right: 0.5em;
 	padding: .25em 1em;
 	display: inline-block;
@@ -786,7 +786,7 @@ nav li a {
 }
 nav li a:hover {
 	color: white;
-	background: #f3f3f3;
+	background: #0f9dc4;
 }
 	
 nav ul li {
