--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
 <body>
 <header role="banner" class="page-header" id="top">
     <!--<h1>{{site.title}}</h1>-->
-    <h1>GEOMECHANICS</h1>
+    <h1>VU NGUYEN'S HOMEPAGE</h1>
     <!--<p>{{site.tagline}}</p>-->
-    <p>a basic guide to geomechanics</p>
+    <p>welcome to Vu's website</p>
 <nav role="navigation">
 <input type="checkbox" id="menu-toggle">
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
