--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,13 @@
 /* add syntax highlight styles */
 @import url("syntax-highlighting.css");
 
-
+.button {
+background: #e7e7e7;
+border: 1px solid;
+border-radius: 3px;
+font: 700, 13px, Helvetica;
+box-sizing: border-box;
+}
 /* Portions of styles taken from or modified from normalize.css */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
