--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
  <li><a href="{{site.baseurl}}/index.html">Blog </a></li>
   <li><a href="{{site.baseurl}}/Publications.html">Publications<a</li>
   <li><a href="{{site.baseurl}}/Family.html">Family</a></li>
-  <li><a href="{{site.baseurl}}/about.html">About</a></li>
-  <li><a href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
+  <li><a class = "button" href="{{site.baseurl}}/about.html">About</a></li>
+  <li><a class = "button" href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
   <li><a href="#"> Academic Notes </a>	  
 
 
