--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,13 +30,12 @@
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
 <ul class="menu">
 	
- <li><a href="{{site.baseurl}}/index.html">Blog </a></li>
-  <li><a href="{{site.baseurl}}/Publications.html">Publications<a</li>
-  <li><a href="{{site.baseurl}}/Family.html">Family</a></li>
+  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog </a></li>
+  <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
+  <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
   <li><a class = "button" href="{{site.baseurl}}/about.html">About</a></li>
   <li><a class = "button" href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
-  <li><a href="#"> Academic Notes </a>	  
-
+  
 
 <!--	
   <li><a class = "button" href="{{site.baseurl}}/index.html">Blog </a></li>
@@ -44,6 +43,8 @@
   <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
   <li><a class = "button"　href="{{site.baseurl}}/about.html">About</a></li>
   <li><a class = "button"　href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
+<li><a href="#"> Academic Notes </a>	  
+
 -->
 	  
   <li><a class = "button"　href="#"> Academic Notes </a>	  
