--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,23 +35,11 @@
   <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
   <li><a class = "button" href="{{site.baseurl}}/about.html">About</a></li>
   <li><a class = "button" href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
-  
-
-<!--	
-  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog </a></li>
-  <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
-  <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
-  <li><a class = "button"　href="{{site.baseurl}}/about.html">About</a></li>
-  <li><a class = "button"　href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
-<li><a href="#"> Academic Notes </a>	  
-
--->
-	  
   <li><a class = "button"　href="#"> Academic Notes </a>	  
 	  <ul>
-		<li><a href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
-	        <li><a href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
-	        <li><a href="{{site.baseurl}}/FEM.html"> FEM </a></li>
+		<li><a class = "button" href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
+	        <li><a class = "button" href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
+	        <li><a class = "button" href="{{site.baseurl}}/FEM.html"> FEM </a></li>
 		  
           </ul>
   </li>
