--- a/css/main.css
+++ b/css/main.css
@@ -374,12 +374,14 @@ header h1 {
 	margin: 0;
 	text-transform: uppercase;
 	color: #0362a5;
+	background-color: #5c755e
 }
 header p {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
 	font-weight: 400;
 	color: #666;
 	text-transform: uppercase;
+	background-color: #5c755e
 }
 /* -------------------------------------------------- 
    top navigation styles
