--- a/css/main.css
+++ b/css/main.css
@@ -367,7 +367,8 @@ img, object, embed {
 header {
 	margin-bottom: 2em;
 	background-color: #5c755e;
-	border-radius: 5px	
+	border-radius: 5px;
+	text-align: center;
 }
 header h1 {
 	font-size: 2em;
