--- a/css/main.css
+++ b/css/main.css
@@ -376,16 +376,15 @@ header h1 {
 	margin: 0;
 	text-transform: uppercase;
 	color: #0362a5;
-		
+	text-align: center;		
 }
 header p {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
 	font-weight: 400;
 	color: #666;
-	text-transform: uppercase;
-	
+	text-transform: uppercase;	
 }
-}
+
 /* -------------------------------------------------- 
    top navigation styles
 -----------------------------------------------------*/
