--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 <body>
 <header role="banner" class="page-header" id="top">
     <!--<h1>{{site.title}}</h1>-->
-    <h1>VU NGUYEN'S HOMEPAGE</h1>
+    <h1 class = "main_title" >VU NGUYEN'S HOMEPAGE</h1>
     <!--<p>{{site.tagline}}</p>-->
     <p>welcome to Vu's website</p>
 <nav role="navigation">
