update main-title header

--- a/css/main.css
+++ b/css/main.css
@@ -366,10 +366,16 @@ img, object, embed {
 }
 header {
 	margin-bottom: 2em;
+	text-align: center;
+}
+
+header.main_title {
+	margin-bottom: 2em;
 	background-color: #c7d5e5;
 	border-radius: 5px;
 	text-align: center;
 }
+
 header h1 {
 	font-size: 2em;
 	line-height:1;
