--- a/css/main.css
+++ b/css/main.css
@@ -371,10 +371,11 @@ header {
 
 header.main_title {
 	margin-bottom: 2em;
-	background-color: #c7d5e5;
-	border-radius: 5px;
+	background-color: #d4f3f7;
+	border-radius: 10px;
 	text-align: center;
 	padding: 20px;
+	margin: 20px;
 }
 
 
