--- a/css/main.css
+++ b/css/main.css
@@ -370,8 +370,7 @@ header {
 }
 
 header.main_title {
-	margin-bottom: 2em;
-	background-color: #d4f3f7;
+	background-color: #b6f2f9;
 	border-radius: 10px;
 	text-align: center;
 	padding: 20px;
