--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,14 +22,14 @@
 <body>
 <header role="banner" class="page-header" id="top">
     <!--<h1>{{site.title}}</h1>-->
-    <h1 class = "main_title" >VU NGUYEN'S HOMEPAGE</h1>
+    <h1 class = "main_title">VU NGUYEN'S HOMEPAGE</h1>
     <!--<p>{{site.tagline}}</p>-->
-    <p>welcome to Vu's website</p>
+    <p class = "main_title">welcome to Vu's website</p>
 <nav role="navigation">
 <input type="checkbox" id="menu-toggle">
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
-<ul class="menu">
-	
+
+<ul class="menu">	
   <li><a class = "button" href="{{site.baseurl}}/index.html">Blog </a></li>
   <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
   <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
