--- a/css/main.css
+++ b/css/main.css
@@ -400,6 +400,9 @@ header p {
 /* -------------------------------------------------- 
    top navigation styles
 -----------------------------------------------------*/
+nav.edit_nav {
+	text-align: center;
+}
 nav ul, nav li {
 	padding: 0;
 	margin: 0;
