--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,10 @@
     <h1 class = "main_title">VU NGUYEN'S HOMEPAGE</h1>
     <!--<p>{{site.tagline}}</p>-->
     <p class = "main_title">welcome to Vu's website</p>
-<nav role="navigation">
+
+	<!--
+	
+	<nav role="navigation">
 <input type="checkbox" id="menu-toggle">
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
 
@@ -45,6 +48,29 @@
   </li>
   </ul>
 </nav>
+
+-->
+	
+	
+<div id = "nav">
+	
+<input type="checkbox" id="menu-toggle">
+<ul>	
+  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog </a></li>
+  <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
+  <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
+  <li><a class = "button" href="{{site.baseurl}}/about.html">About</a></li>
+  <li><a class = "button" href="{{site.baseurl}}/tags/" title="Archive">Archive</a></li>
+  <li><a class = "button"　href="#"> Academic Notes </a>	  
+	  <ul>
+		<li><a class = "button" href="{{site.baseurl}}/Plasticity.html"> Plasticity </a></li>
+	        <li><a class = "button" href="{{site.baseurl}}/geotech.html"> Geomechanics </a></li>
+	        <li><a class = "button" href="{{site.baseurl}}/FEM.html"> FEM </a></li>		  
+          </ul>
+  </li>
+  </ul>
+</div>
+	
 </header>
 
 <!-- content goes here -->
