--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,12 @@ color: #666;
 	text-align: center;
 }
 
-#nav li {
+/*#nav li {
 	display: inline;
 	padding: 15px;
 	vertilca-align: middle;
 }
+*/
 
 /* Portions of styles taken from or modified from normalize.css */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
