--- a/css/main.css
+++ b/css/main.css
@@ -699,7 +699,7 @@ aside li {
    top navigation styles
 -----------------------------------------------------*/
 nav {
-	background: #1978e5;
+	background: green;
 	margin-bottom: 1em;
 	text-align: center;
 	padding: 2em;
