--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,18 @@
   </ul>
 </nav>
 	
+	
+<div id = "nav">
+<ul>
+	<li><a href="">Home5</a></li>
+	<li><a href="">Home3</a></li>
+	<li><a href="">Home2</a></li>
+	<li><a href="">Home1</a></li>	
+<ul>
+	
+</div>
+	
+	
 </header>
 
 <!-- content goes here -->
