--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
 	
 <div id = "nav">
 <ul>
-	<li><a href="">Home5</a></li>
-	<li><a href="">Home3</a></li>
+	<li><a href="">HomeA</a></li>
+	<li><a href="">HomeB</a></li>
 	<li><a href="">Home2</a></li>
 	<li><a href="">Home1</a></li>	
 <ul>
