--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,16 +27,16 @@
     <p class = "main_title">welcome to Vu's website</p>
 
 	
-<nav role="navigation">
+
 <!--
+<nav role="navigation">
 <input type="checkbox" id="menu-toggle">
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
--->
+-->	
 	
-	
-	
+<nav>
 <ul class="menu">	
-  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog </a></li>
+  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog1 </a></li>
   <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
   <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
   <li><a class = "button" href="{{site.baseurl}}/about.html">About</a></li>
@@ -51,17 +51,6 @@
   </li>
   </ul>
 </nav>
-
-	
-<div id = "nav">
-<ul>
-	<li><a href="">HomeA</a></li>
-	<li><a href="">HomeB</a></li>
-	<li><a href="">Home2</a></li>
-	<li><a href="">Home1</a></li>	
-<ul>
-	
-</div>
 	
 	
 </header>
