--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 	
 <nav>
 <ul class="menu">	
-  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog1 </a></li>
+  <li><a class = "button" href="{{site.baseurl}}/index.html">Blog</a></li>
   <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
   <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
   <li><a class = "button" href="{{site.baseurl}}/about.html">About</a></li>
