--- a/css/main.css
+++ b/css/main.css
@@ -397,10 +397,7 @@ img, object, embed {
 	padding: 1em 1em 0;
 }
 
-.menu{
-	background-color: #6bace5;
-	text-align: center;
-}
+
 header {
 	margin-bottom: 2em;
 }
@@ -441,12 +438,19 @@ header p {
 nav.edit_nav {
 	text-align: center;
 }
+
+nav ul.menu{
+	background-color: #6bace5;
+	text-align: center;
+}
+
 nav ul, nav li {
 	padding: 0;
 	margin: 0;
 	list-style: none;
 	min-height: 0;
 }
+
 nav li a {
 	font: 1em 'Oswald', 'Helvetica Narrow', Arial, sans-serif;
 	color: white;
