--- a/css/main.css
+++ b/css/main.css
@@ -305,7 +305,11 @@ h1, h2, h3, h4, h5, h6 {
   	text-align: left;
 	font-weight: bold;
 	color:	#0362a5;
-	border-bottom: 1px solid black;	
+	
+}
+
+h1{
+	border-bottom: 1px solid black;		
 }
 
 
