--- a/css/main.css
+++ b/css/main.css
@@ -382,7 +382,7 @@ header {
 }
 
 header h1.main_title {
-	background-color: #b6f2f9;
+	background-color: #77e5d4;
 	border-radius: 5px;
 	text-align: center;
 	padding: 20px;
