--- a/css/main.css
+++ b/css/main.css
@@ -297,6 +297,7 @@ th {
 	background: #eaeded;
 	direction: ltr;
 	text-align: justify;
+	 background-image: ({{site.url}}/assests/)ban.png;
 }
 
 h1, h2, h3, h4, h5, h6 {
