--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 <label for="menu-toggle" class="toggle-label"><span>menu</span></label>
 -->	
 	
-<nav>
+<nav style="margin: 0 auto">
 <ul class="menu">	
   <li><a class = "button" href="{{site.baseurl}}/index.html">Blog</a></li>
   <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
